--- a/app/src/main/res/layout/item_follower_user.xml
+++ b/app/src/main/res/layout/item_follower_user.xml
@@ -3,31 +3,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
+    android:layout_marginStart="15dp"
+    android:layout_marginEnd="10dp"
+    android:padding="20dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id="@+id/follow_user_image"
-        android:src="@mipmap/ic_launcher"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="W,1:1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
     <TextView
+        android:id="@+id/rp_name"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:id="@+id/follow_user_name"
+        android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginHorizontal="16dp"
-        app:layout_constraintBottom_toBottomOf="@id/follow_user_image"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/follow_user_image"
-        app:layout_constraintTop_toTopOf="@id/follow_user_image"
-        tools:text="userid"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/rp_ex"
+        android:maxLines="1"
+        android:ellipsize="end"
+        tools:text="레포지터리 이름" />
+
+    <TextView
+        android:id="@+id/rp_ex"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:maxLines="1"
+        app:layout_constraintBottom_toTopOf="@id/la"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rp_name"
+        android:ellipsize="end"
+        tools:text="레포지터리설명" />
+
+    <TextView
+        android:id="@+id/la"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rp_ex"
+        tools:text="언어" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
