--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -11,34 +11,25 @@
         android:id="@+id/me"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="10dp"
         android:padding="16dp"
-        app:layout_constraintBottom_toTopOf="@id/user_info_fragment"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="140dp"
             android:src="@mipmap/ic_launcher"
-            app:layout_constraintEnd_toEndOf="@id/me"
             app:layout_constraintStart_toStartOf="@id/me"
             app:layout_constraintBottom_toTopOf="@id/textView2"
             app:layout_constraintTop_toTopOf="@id/me"/>
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="1dp"
-            android:layout_marginEnd="300dp"
             android:text="songhyun101"
             app:layout_constraintBottom_toTopOf="@id/user_id"
-            app:layout_constraintEnd_toEndOf="@+id/me"
             app:layout_constraintStart_toStartOf="@id/me"
             app:layout_constraintTop_toBottomOf="@id/image" />
 
@@ -49,9 +40,7 @@
             android:text="songhyun101"
             android:textSize="30sp"
             android:layout_marginStart="1dp"
-            android:layout_marginEnd="200dp"
             app:layout_constraintBottom_toTopOf="@id/slang"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/me"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -61,22 +50,20 @@
             android:layout_height="wrap_content"
             android:text="개발하는 기획자"
             app:layout_constraintBottom_toBottomOf="@+id/me"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/me"
-            app:layout_constraintTop_toBottomOf="@+id/user_id"
-            android:layout_marginEnd="280dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/user_id" />
 
         <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="260dp"
             android:layout_marginTop="130dp"
             android:text="MORE"
-            app:layout_constraintEnd_toEndOf="@id/me"
-            app:layout_constraintBottom_toBottomOf="@id/me"
-            app:layout_constraintStart_toStartOf="@id/me"
-            app:layout_constraintTop_toTopOf="@id/me" />
+            app:layout_constraintBottom_toBottomOf="@id/slang"
+            app:layout_constraintTop_toTopOf="@id/me"
+            app:layout_constraintStart_toEndOf="@id/slang"
+            android:layout_marginStart="150dp"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -86,8 +73,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/me" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
