--- a/app/src/main/res/layout/item_follower_user.xml
+++ b/app/src/main/res/layout/item_follower_user.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="16dp"
+    android:padding="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:id="@+id/follow_user_image"
-        android:src="@mipmap/ic_launcher"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="W,1:1"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,11 +21,8 @@
         android:id="@+id/follow_user_name"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginHorizontal="16dp"
-        app:layout_constraintBottom_toBottomOf="@id/follow_user_image"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/follow_user_image"
-        app:layout_constraintTop_toTopOf="@id/follow_user_image"
+        app:layout_constraintTop_toBottomOf="@id/follow_user_image"
+        app:layout_constraintStart_toStartOf="parent"
         tools:text="userid"
         />
 
