2차세미나_level 2-1과제

--- a/app/src/main/res/layout/fragment_following_.xml
+++ b/app/src/main/res/layout/fragment_following_.xml
@@ -25,6 +25,7 @@
                 tools:listitem="@layout/item_follower_user"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 android:layout_marginTop="2dp"
+                app:spanCount="5"
                 />
 
         </ScrollView>
