--- a/app/src/main/res/layout/item_follower_user.xml
+++ b/app/src/main/res/layout/item_follower_user.xml
@@ -19,8 +19,11 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:id="@+id/follow_user_name"
-        android:textSize="20sp"
+        android:text="#000000"
+        android:textSize="15sp"
         android:textStyle="bold"
+        android:maxLines="1"
+        android:ellipsize="end"
         app:layout_constraintTop_toBottomOf="@id/follow_user_image"
         app:layout_constraintStart_toStartOf="parent"
         tools:text="userid"
