--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -55,7 +55,18 @@
             android:layout_marginTop="3dp"
             ></TextView>
 
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <Button
+        android:id="@+id/logout_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout_1"
+        android:layout_marginTop="100dp"
+        android:layout_marginHorizontal="10dp"
+        android:background="@drawable/rect"
+        android:text="로그아웃"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
